flux/apps/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 8000
